# realworld-axum-api

./: .env.example  Cargo.toml
docs/: db.md  tools.md
migrations/: 20251101092451_create_users_table.sql  20251101121844_create_email_verification_tokens.sql  20251101122102_add_email_verified_to_users.sql  20251101125905_create_password_reset_tokens.sql  20251101132129_create_refresh_tokens.sql  20251102041106_add_token_rotation_fields.sql
src/: errors.rs  lib.rs  main.rs  metrics.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  tokens.rs
src/handlers/: auth.rs  health.rs  mod.rs
src/models/: email_verification_token.rs  mod.rs  password_reset_token.rs  refresh_token.rs  user.rs
src/otlp/: mod.rs
src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs  password_reset_schemas.rs  token_schemas.rs  user_schemas.rs
src/services/: email_service.rs  mod.rs
src/utils/: mod.rs  token_generator.rs
src/views/: home.rs  mod.rs
templates/: _layout.css  error.askama  greet.askama  index.askama
