[package]
name = "realworld-axum-api"
version = "0.1.0"
edition = "2024"


[lib]
name = "realworld_axum_api"
path = "src/lib.rs"

[[bin]]
name = "realworld-axum-api"
path = "src/main.rs"

[dependencies]
# Core web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Add these to your existing dependencies
bcrypt = "0.15"
jsonwebtoken = "9.0"
async-trait = "0.1"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
tracing-error = "0.2"

lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "hostname"] }
askama = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "compression-br", "cors", "sensitive-headers"] }
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
displaydoc = "0.2"
pretty-error-debug = "0.3"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31"
opentelemetry-appender-tracing = "0.31"
smallvec = "1.15.1"
tonic = "0.14.2"
prometheus = "0.14.0"
